dark mode colors fixed

--- a/static/styles.css
+++ b/static/styles.css
@@ -23,17 +23,37 @@ body.dark {
     filter: hue-rotate(180deg) invert(1);
 }
 
+body.dark #quiz-instructions {
+    filter: invert(0.05) !important;
+}
+
 body.dark .fa-times-circle {
     filter: invert(1) hue-rotate(180deg) saturate(4) !important;
 }
 
-body.dark .btn-warning {
-    filter: hue-rotate(-90deg) invert(1) hue-rotate(-90deg);
+body.dark .hint-result {
+    filter: invert(0.1) hue-rotate(180deg) !important;
+}
+
+body.dark .alert-warning, body.dark .btn-warning {
+    filter: invert(1) hue-rotate(180deg) saturate(1.5) !important;
+}
+
+body.dark .yes-hint { 
+    filter: brightness(1.15) !important;
+}
+
+body.dark #instruction-container, body.dark .alert-warning {
+    position: fixed !important;
 }
 
 .checkbox {
 	opacity: 0;
 	position: absolute;
+}
+
+#bg-mode {
+    margin-top: 50px;
 }
 
 .label {
@@ -62,16 +82,16 @@ body.dark .btn-warning {
 	transition: transform 0.2s linear;
 }
 
-.checkbox:checked + .label .ball {
+/* .checkbox:checked + .label .ball {
 	transform: translateX(24px);
-}
+} */
 
 
-.fa-moon {
+.fa-moon-o {
 	color: #f1c40f;
 }
 
-.fa-sun {
+.fa-sun-o {
 	color: #f39c12;
 }
 
@@ -80,6 +100,9 @@ body.dark .btn-warning {
 #index-bg {
     background-color: #eaeaf7;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #page-bg {
@@ -120,7 +143,7 @@ body.dark .btn-warning {
 }
 
 /*     results page      */
-.fa {
+.fa-2x {
     margin-right: 10px;
     display: inline;
 }
@@ -146,8 +169,10 @@ body.dark .btn-warning {
 }
 
 .hint-result {
-    background-color: #f5eecda1 !important;
-    border-color: #f5eecd !important;
+    background-color: #ffee9aaa !important;
+    border-color: #ffee9a !important;
+    /* background-color: #f5eecda1 !important;
+    border-color: #ffee9a !important; */
     pointer-events: none;
     color: rgb(0, 0, 36) !important;
 }
@@ -211,6 +236,7 @@ p {
 
 .hint-p {
     font-style: italic;
+    color: #8d5c00;
 }
 
 .get-hint {
